--- a/static/plantilla/demo/index.html
+++ b/static/plantilla/demo/index.html
@@ -7,7 +7,7 @@
   <title>Admin One HTML - Bulma Admin Dashboard</title>
 
   <!-- Bulma is included -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='plantilla/demo/css/main.min.css') }}">
+  <link rel="stylesheet" href="css/main.min.css">
 
   <!-- Fonts -->
   <link rel="dns-prefetch" href="https://fonts.gstatic.com">
@@ -631,7 +631,7 @@
         <div class="level-right">
           <div class="level-item">
             <div class="logo">
-              <a href="https://justboil.me"><img src="plantilla/demo/img/justboil-logo.svg" alt="JustBoil.me"></a>
+              <a href="https://justboil.me"><img src="img/justboil-logo.svg" alt="JustBoil.me"></a>
             </div>
           </div>
         </div>
@@ -660,9 +660,9 @@
 </div>
 
 <!-- Scripts below are for demo only -->
-<script src="{{ url_for('static', filename='plantilla/demo/js/main.min.js') }}" defer></script>
+<script type="text/javascript" src="js/main.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-<script src="{{ url_for('static', filename='plantilla/demo/js/chart.sample.min.js') }}" defer></script>
+<script type="text/javascript" src="js/chart.sample.min.js"></script>
 
 <!-- Icons below are for demo only. Feel free to use any icon pack. Docs: https://bulma.io/documentation/elements/icon/ -->
 <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.9.95/css/materialdesignicons.min.css">
